--- a/src/main/webapp/chatease/test/index.html
+++ b/src/main/webapp/chatease/test/index.html
@@ -7,6 +7,7 @@
 	</style>
 	<!--<link type="text/css" rel="stylesheet" href="css/style.css" />-->
 	<script type='text/javascript' src="../sockjs/sockjs-1.0.3.js"></script>
+	<!--<script type='text/javascript' src='../chatease.min.js'></script>-->
 	<script type='text/javascript' src='../cn/studease/chatease.js'></script>
 	<script type='text/javascript' src='../cn/studease/utils/chatease.utils.js'></script>
 	<script type='text/javascript' src='../cn/studease/utils/chatease.utils.css.js'></script>
