--- a/src/main/webapp/chatease/test/index.html
+++ b/src/main/webapp/chatease/test/index.html
@@ -39,7 +39,7 @@
 		var chat = chatease('chatwrap').setup({
 			width: 300,
 			height: 464,
-			url: 'ws://192.168.1.202/websocket/websck',
+			url: 'ws://localhost:8080/websocket/websck',
 			events: {
 				onReady: function(e) {
 					cblog('onReady');
