--- a/src/main/webapp/chatease/test/index.html
+++ b/src/main/webapp/chatease/test/index.html
@@ -43,6 +43,7 @@
 			width: 300,
 			height: 464,
 			url: 'ws://192.168.1.202/websocket/websck',
+			channel: 1,
 			keywords: keywords,
 			events: {
 				onReady: function(e) {
